--- a/Strong-Random-Password-Generator/Strong-Random-Password-Generator/Strong-Random-Password-Generator.csproj
+++ b/Strong-Random-Password-Generator/Strong-Random-Password-Generator/Strong-Random-Password-Generator.csproj
@@ -79,6 +79,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1200px-Flag_of_the_United_Kingdom.svg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1200px-Flag_of_Poland.svg.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
